<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/txtName"
        android:textSize="35sp"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/etName"
        android:textSize="35sp"
        android:textColorHint="#95A1AA"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="@string/txtSex"
            android:textSize="35sp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <RadioButton
                android:id="@+id/btnMan"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnMan"
                android:textSize="35sp"
                />
            <RadioButton
                android:id="@+id/btnWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnWoman"
                android:textSize="35sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/txtLike"
            android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cbMusic"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/cbMusic"
            android:textSize="35sp" />

        <CheckBox
            android:id="@+id/cbSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbSport"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cbSwim"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/cbSwim"
            android:textSize="35sp" />

        <CheckBox
            android:id="@+id/cbRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbRead"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSubmit"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textSize="35sp" />
    </LinearLayout>





</LinearLayout>
